[package]
name = "pvz_interception_calculator"
version = "2.0.8"
edition = "2021"
description = "The Rust rewrite of the original PVZ Interception Calculator that calculates precise imp movement."
license = "MIT"
repository = "https://github.com/Rottenham/pvz-interception-calculator-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-fmt = "0.4.0"
rustyline = "12.0.0"
termcolor = "1.2"

[features]
en = []
zh = []
